2008-07-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Minor bugfixes to Keyring and SI Fixes mods.
	* UCC: Fixed usecode class inheritance. Fixed test1.uc so that it compiles.
	* gamemgr/*: Mod manager bug which showed entries for some games that were
	  not present.
	* palette.cc: Prevent palettes from being applied if the game is faded out.
	* objs/jawbone.cc: Missing return in function.
	* usecode/ucxt/src/ucdata.cc: printf parameter was wrong.

2008-07-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed old-style "response" conversations. They work identically to converse
	  case blocks now, but are slightly less versatile (e.g., there is no "remove"
	  keyword). "response" dialogs can also specify multiple strings now through
	  the "in" keyword; see test1.uc for examples.
	  Also, added a possible "default" case for converse-case blocks, and a
	  "user_choice" expression which pushes the last-selected answer in the stack.
	* Fixed SI turtle (bug #2020101).
	* Hostile creatures now attack the avatar once more -- and the avatar will
	  also target them when in combat mode (bug #2024437).
	* Fixed polymorph and Petra bugs #1963551 and 1978514.
	* Fixed menu bugs #2024853 and #2024813.

2008-07-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Modified animation recycles to fix bug #2020103; recycle (if nonzero) is now
	the number of frames at the end of the animation to repeat.

2008-07-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing PNG detection when importing PNGs. Also, added some checks when
	importing shp files.

2008-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: remove AC_PATH_XTRA. Its output is apparently unused
	  and it breaks configure on non-linux platforms

2008-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: fix underquoted help strings
	* various: warnings
	* shapes/weaponinf.cc: fix missing return value